--- a/imdb.ipynb
+++ b/imdb.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -83,10 +83,12 @@
     "                    for y in range(0,9):\n",
     "                        for u in range(1,9):\n",
     "                            w_url='https://www.imdb.com/title/tt'+str(q)+str(w)+str(e)+str(r)+str(t)+str(y)+str(u)+'/'\n",
-    "                            response=requests.get(url,headers=headers)\n",
+    "                            response=requests.get(w_url,headers=headers)\n",
     "                            content=response.content\n",
-    "                            soup=BeautifulSoup(content)\n",
-    "                            title=\n",
+    "                            soup=BeautifulSoup(content,'html.parser')\n",
+    "                            title=soup.find('span',class_='sc-afe43def-1 fDTGTb').text\n",
+    "                            storyline=soup.find_all('div',class_='ipc-html-content-inner-div')[2].text\n",
+    "\n",
     "                            \n",
     "                            i=i+1\n",
     "                            print(i,w_url)\n",
@@ -100,6 +102,55 @@
     "\n",
     "\n",
     "                        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<a aria-disabled=\"false\" class=\"ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link\" href=\"/name/nm0005690/?ref_=tt_ov_dr\" role=\"button\" tabindex=\"0\">William K.L. Dickson</a>, <a aria-disabled=\"false\" class=\"ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link\" href=\"/name/nm1588970/?ref_=tt_ov_st\" role=\"button\" tabindex=\"0\">Carmencita</a>, <a aria-disabled=\"false\" class=\"ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link\" href=\"/name/nm0005690/?ref_=tt_ov_dr\" role=\"button\" tabindex=\"0\">William K.L. Dickson</a>, <a aria-disabled=\"false\" class=\"ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link\" href=\"/name/nm1588970/?ref_=tt_ov_st\" role=\"button\" tabindex=\"0\">Carmencita</a>, <a aria-disabled=\"false\" class=\"ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link\" href=\"/name/nm0005690/?ref_=tt_cl_dr_1\" role=\"button\" tabindex=\"0\">William K.L. Dickson</a>, <a aria-disabled=\"false\" class=\"ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link\" href=\"/title/tt0000001/releaseinfo?ref_=tt_dt_rdat\" role=\"button\" tabindex=\"0\">March 10, 1894 (United States)</a>, <a aria-disabled=\"false\" class=\"ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link\" href=\"/search/title/?country_of_origin=US&amp;ref_=tt_dt_cn\" role=\"button\" tabindex=\"0\">United States</a>, <a aria-disabled=\"false\" class=\"ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link\" href=\"/search/title?title_type=feature&amp;primary_language=zxx&amp;sort=moviemeter,asc&amp;ref_=tt_dt_ln\" role=\"button\" tabindex=\"0\">None</a>, <a aria-disabled=\"false\" class=\"ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link\" href=\"/search/title?locations=West%20Orange%2C%20New%20Jersey%2C%20USA&amp;ref_=tt_dt_loc\" role=\"button\" tabindex=\"0\">West Orange, New Jersey, USA</a>, <a aria-disabled=\"false\" class=\"ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link\" href=\"/company/co0037035?ref_=tt_dt_co_1\" role=\"button\" tabindex=\"0\">Edison Manufacturing Company</a>, <a aria-disabled=\"false\" class=\"ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link\" href=\"/search/title/?colors=black_and_white&amp;ref_=tt_spec_att\" role=\"button\" tabindex=\"0\">Black and White</a>, <a aria-disabled=\"false\" class=\"ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link\" href=\"/search/title/?sound_mixes=silent&amp;ref_=tt_spec_att\" role=\"button\" tabindex=\"0\">Silent</a>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Date=soup.find_all('a',class_='ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link')\n",
+    "print(Date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "William K.L. Dickson\n",
+      "Carmencita\n",
+      "William K.L. Dickson\n",
+      "Carmencita\n",
+      "William K.L. Dickson\n",
+      "March 10, 1894 (United States)\n",
+      "United States\n",
+      "None\n",
+      "West Orange, New Jersey, USA\n",
+      "Edison Manufacturing Company\n",
+      "Black and White\n",
+      "Silent\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(Date))\n",
+    "for g in Date:\n",
+    "    print(g.text)"
    ]
   }
  ],
