added some other details. but still issue eith date

--- a/imdb.ipynb
+++ b/imdb.ipynb
@@ -62,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 https://www.imdb.com/title/tt0000001/\n"
+      "1 https://www.imdb.com/title/tt0000004/\n"
      ]
     }
    ],
@@ -81,19 +81,23 @@
     "            for r in range(0,9):\n",
     "                for t in range(0,9):\n",
     "                    for y in range(0,9):\n",
-    "                        for u in range(1,9):\n",
+    "                        for u in range(4,9):\n",
     "                            w_url='https://www.imdb.com/title/tt'+str(q)+str(w)+str(e)+str(r)+str(t)+str(y)+str(u)+'/'\n",
     "                            response=requests.get(w_url,headers=headers)\n",
     "                            content=response.content\n",
     "                            soup=BeautifulSoup(content,'html.parser')\n",
     "                            title=soup.find('span',class_='sc-afe43def-1 fDTGTb').text\n",
-    "                            storyline=soup.find_all('div',class_='ipc-html-content-inner-div')[2].text\n",
+    "                            try:\n",
+    "                             storyline=soup.find_all('div',class_='ipc-html-content-inner-div')[2].text\n",
+    "                            except:\n",
+    "                                storyline='NaN'\n",
     "\n",
-    "                            \n",
+    "                            Director=soup.find_all('a',class_='ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link')[0].text\n",
     "                            i=i+1\n",
     "                            print(i,w_url)\n",
+    "                        \n",
     "                            break\n",
-    "                        break\n",
+    "                        break                   \n",
     "                    break\n",
     "                break\n",
     "            break\n",
@@ -102,6 +106,77 @@
     "\n",
     "\n",
     "                        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['October', '28,', '1892']\n"
+     ]
+    }
+   ],
+   "source": [
+    "Date=soup.find_all('ul',class_='ipc-metadata-list ipc-metadata-list--dividers-all ipc-metadata-list--base')\n",
+    "Date=(Date[0].text.strip('Release date')).split(' ')\n",
+    "print(Date[0:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "October\n",
+      "28,\n",
+      "1892\n",
+      "(France)Country\n",
+      "of\n",
+      "originFranceLanguageNoneAlso\n",
+      "known\n",
+      "asПолная\n",
+      "кружка\n",
+      "пиваSee\n",
+      "more\n",
+      "company\n",
+      "credits\n",
+      "at\n",
+      "IMDbPro\n"
+     ]
+    }
+   ],
+   "source": [
+    "for d in Date.split(' '):\n",
+    "    print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find_all('div',class_='ipc-overflowText ipc-overflowText--pageSection ipc-overflowText--base') #ipc-html-content-inner-div"
    ]
   },
   {
