found new method

--- a/imdb.ipynb
+++ b/imdb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,11 +240,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 https://www.imdb.com/title/tt0000001/\n",
+      "2 https://www.imdb.com/title/tt0000002/\n",
+      "3 https://www.imdb.com/title/tt0000003/\n",
+      "4 https://www.imdb.com/title/tt0000004/\n",
+      "5 https://www.imdb.com/title/tt0000005/\n",
+      "6 https://www.imdb.com/title/tt0000006/\n",
+      "7 https://www.imdb.com/title/tt0000007/\n",
+      "8 https://www.imdb.com/title/tt0000008/\n",
+      "9 https://www.imdb.com/title/tt0000009/\n",
+      "10 https://www.imdb.com/title/tt0000010/\n",
+      "11 https://www.imdb.com/title/tt0000011/\n",
+      "12 https://www.imdb.com/title/tt0000012/\n",
+      "13 https://www.imdb.com/title/tt0000013/\n",
+      "14 https://www.imdb.com/title/tt0000014/\n",
+      "15 https://www.imdb.com/title/tt0000015/\n",
+      "16 https://www.imdb.com/title/tt0000016/\n",
+      "17 https://www.imdb.com/title/tt0000017/\n",
+      "18 https://www.imdb.com/title/tt0000018/\n",
+      "19 https://www.imdb.com/title/tt0000019/\n",
+      "20 https://www.imdb.com/title/tt0000020/\n",
+      "21 https://www.imdb.com/title/tt0000021/\n",
+      "22 https://www.imdb.com/title/tt0000022/\n",
+      "23 https://www.imdb.com/title/tt0000023/\n",
+      "24 https://www.imdb.com/title/tt0000024/\n",
+      "25 https://www.imdb.com/title/tt0000025/\n",
+      "26 https://www.imdb.com/title/tt0000026/\n",
+      "27 https://www.imdb.com/title/tt0000027/\n",
+      "28 https://www.imdb.com/title/tt0000028/\n",
+      "29 https://www.imdb.com/title/tt0000029/\n",
+      "30 https://www.imdb.com/title/tt0000030/\n",
+      "31 https://www.imdb.com/title/tt0000031/\n",
+      "32 https://www.imdb.com/title/tt0000032/\n",
+      "33 https://www.imdb.com/title/tt0000033/\n",
+      "34 https://www.imdb.com/title/tt0000034/\n",
+      "35 https://www.imdb.com/title/tt0000035/\n",
+      "36 https://www.imdb.com/title/tt0000036/\n",
+      "37 https://www.imdb.com/title/tt0000037/\n",
+      "38 https://www.imdb.com/title/tt0000038/\n",
+      "39 https://www.imdb.com/title/tt0000039/\n",
+      "40 https://www.imdb.com/title/tt0000040/\n",
+      "41 https://www.imdb.com/title/tt0000041/\n"
+     ]
+    }
+   ],
    "source": [
-    "i"
+    "%%time\n",
+    "i=0\n",
+    "for num in range(1,100000000):\n",
+    "                          try:\n",
+    "                            len_num=7-len(str(num))\n",
+    "                            id_='0'*len_num+str(num)\n",
+    "\n",
+    "                            #id_=str(str(q)+str(w)+str(e)+str(r)+str(t)+str(y)+str(u))\n",
+    "                            w_url='https://www.imdb.com/title/tt'+id_+'/'\n",
+    "                            response=requests.get(w_url,headers=headers)\n",
+    "                            content=response.content\n",
+    "                            soup=BeautifulSoup(content,'html.parser')\n",
+    "                            Title=soup.find('span',class_='sc-afe43def-1 fDTGTb').text\n",
+    "                            try:\n",
+    "                             storyline=soup.find_all('div',class_='ipc-html-content-inner-div')[2].text\n",
+    "                            except:\n",
+    "                                storyline='NaN'\n",
+    "\n",
+    "                            Director=soup.find_all('a',class_='ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link')[0].text\n",
+    "                            Date=release_info(id_)\n",
+    "                            Runtime,colr=runtime(id_)\n",
+    "                            Rating=(soup.find_all('span',class_='sc-bde20123-1 iZlgcd')[0]).text\n",
+    "                            country=soup.find('ul',class_='ipc-inline-list ipc-inline-list--show-dividers ipc-inline-list--inline ipc-metadata-list-item__list-content base')\n",
+    "                            df['Country'].append(country)\n",
+    "                            key_words=keywords(str(id_))\n",
+    "                            i=i+1\n",
+    "                            print(i,w_url)\n",
+    "                            df['Id'].append(id_)\n",
+    "                            df['Title'].append(Title)\n",
+    "                            df['Storyline'].append(storyline)\n",
+    "                            df['Director'].append(Director)\n",
+    "                            df['Date'].append(Date)\n",
+    "                            df['Runtime'].append(Runtime)\n",
+    "                            df['Color'].append(colr)\n",
+    "                            df['Rating'].append(Rating)\n",
+    "                            df['keywords'].append(key_words)\n",
+    "                            if i==100:\n",
+    "                              main_df=pd.DataFrame(df)\n",
+    "                              save_df=pd.concat([load_df, main_df], ignore_index=True)\n",
+    "                              save_df.to_csv(path,index=False,sep=';',header=True)\n",
+    "                              i=0\n",
+    "                          except:\n",
+    "                            pass\n",
+    "                           \n",
+    "                \n",
+    "          \n",
+    "       \n",
+    "\n",
+    "\n",
+    "                        "
    ]
   },
   {
