--- a/imdb.ipynb
+++ b/imdb.ipynb
@@ -63,28 +63,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'load_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m load_df\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'load_df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#load_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,6 +228,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def country(soup):\n",
+    " r=soup.find_all('li',class_='ipc-metadata-list__item')\n",
+    " for r in r:\n",
+    "    if 'Country' in r.text.split() :\n",
+    "     country=r.text.replace('Country of origin', '')\n",
+    "     return country\n",
+    "     break\n",
+    "   \n",
+    "\n",
+    "     \n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -287,7 +294,36 @@
       "38 https://www.imdb.com/title/tt0000038/\n",
       "39 https://www.imdb.com/title/tt0000039/\n",
       "40 https://www.imdb.com/title/tt0000040/\n",
-      "41 https://www.imdb.com/title/tt0000041/\n"
+      "41 https://www.imdb.com/title/tt0000041/\n",
+      "42 https://www.imdb.com/title/tt0000042/\n",
+      "43 https://www.imdb.com/title/tt0000043/\n",
+      "44 https://www.imdb.com/title/tt0000044/\n",
+      "45 https://www.imdb.com/title/tt0000045/\n",
+      "46 https://www.imdb.com/title/tt0000046/\n",
+      "47 https://www.imdb.com/title/tt0000047/\n",
+      "48 https://www.imdb.com/title/tt0000048/\n",
+      "49 https://www.imdb.com/title/tt0000049/\n",
+      "50 https://www.imdb.com/title/tt0000050/\n",
+      "51 https://www.imdb.com/title/tt0000051/\n",
+      "52 https://www.imdb.com/title/tt0000052/\n",
+      "53 https://www.imdb.com/title/tt0000053/\n",
+      "54 https://www.imdb.com/title/tt0000054/\n",
+      "55 https://www.imdb.com/title/tt0000055/\n",
+      "56 https://www.imdb.com/title/tt0000056/\n",
+      "57 https://www.imdb.com/title/tt0000057/\n",
+      "58 https://www.imdb.com/title/tt0000058/\n",
+      "59 https://www.imdb.com/title/tt0000059/\n",
+      "60 https://www.imdb.com/title/tt0000060/\n",
+      "61 https://www.imdb.com/title/tt0000061/\n",
+      "62 https://www.imdb.com/title/tt0000062/\n",
+      "63 https://www.imdb.com/title/tt0000063/\n",
+      "64 https://www.imdb.com/title/tt0000064/\n",
+      "65 https://www.imdb.com/title/tt0000065/\n",
+      "66 https://www.imdb.com/title/tt0000066/\n",
+      "67 https://www.imdb.com/title/tt0000067/\n",
+      "68 https://www.imdb.com/title/tt0000068/\n",
+      "69 https://www.imdb.com/title/tt0000069/\n",
+      "70 https://www.imdb.com/title/tt0000070/\n"
      ]
     }
    ],
@@ -314,7 +350,7 @@
     "                            Date=release_info(id_)\n",
     "                            Runtime,colr=runtime(id_)\n",
     "                            Rating=(soup.find_all('span',class_='sc-bde20123-1 iZlgcd')[0]).text\n",
-    "                            country=soup.find('ul',class_='ipc-inline-list ipc-inline-list--show-dividers ipc-inline-list--inline ipc-metadata-list-item__list-content base')\n",
+    "                            country=country(soup)\n",
     "                            df['Country'].append(country)\n",
     "                            key_words=keywords(str(id_))\n",
     "                            i=i+1\n",
